Resolve warnings in test file